--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,14 @@
     <string name="title_activity_timeline">Home</string>
     <string name="login_label">Connect to Twitter</string>
 
+    <!-- Error messages -->
+    <string name="error_authenitcation_failure">Authentication failure.</string>
+    <string name="error_connectivity_failure">No Connection, check your settings.</string>
+    <string name="action_retry">Retry</string>
+    <string name="action_continue_offline">Continue off-line</string>
+
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tweet_hint">What\'s happening?</string>
